# aiDomainContext

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_connectors_and_sync_jobs.py
src/aidomaincontext/: config.py  main.py  security.py
src/aidomaincontext/api/: routes_admin.py  routes_connectors.py  routes_oauth.py  routes_search.py  routes_upload.py  routes_webhooks.py
src/aidomaincontext/connectors/: __init__.py  base.py  file_upload.py  github.py  gmail.py  google_drive.py  jira.py  retry.py  slack.py  yahoo_mail.py
src/aidomaincontext/generation/: llm.py
src/aidomaincontext/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
src/aidomaincontext/models/: __init__.py  chunk.py  connector.py  database.py  document.py  sync_job.py
src/aidomaincontext/retrieval/: hybrid_search.py
src/aidomaincontext/schemas/: connectors.py  documents.py  search.py
src/aidomaincontext/sync/: arq_worker.py  scheduler.py  worker.py
tests/fixtures/: github_responses.py  slack_responses.py
tests/unit/: test_api.py  test_api_connectors.py  test_chunker.py  test_connector_file_upload.py  test_connector_github.py  test_connector_google_drive.py  test_connector_jira.py  test_connector_slack.py  test_connector_yahoo_mail.py  test_hybrid_search.py  test_llm_and_gmail.py  test_pipeline_search_scheduler.py  test_routes_connectors_webhooks_oauth.py  test_routes_search_upload.py  test_security_parser_embedder.py  test_sync_worker.py
